# OSG_project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
